confirmed pages connection and began adding styling and content

--- a/app/views/portfolio/portfolio.html.erb
+++ b/app/views/portfolio/portfolio.html.erb
@@ -1,2 +1,2 @@
-<h1>Portfolio#portfolio</h1>
-<p>Find me in app/views/portfolio/portfolio.html.erb</p>
+<h1 class="head">Corrigan's Portfolio</h1>
+<p>Some Content Below</p>
